--- a/ui_www/css/app.css
+++ b/ui_www/css/app.css
@@ -99,11 +99,20 @@
 
 .imcenter {
 	display : inline-block; 
-	position: relative; 
-	left:10%;
-	top: 10%;
-	width: 80%;
-    height: 90%;
+	position: relative;
+    left : 5%;
+    right: 5%;
+
+	margin-left: auto;
+    margin-right: auto;
+
+	max-width: 480px;
+    max-height: 480px;
+
+}
+
+.imageblur {
+    filter: blur(5px);
 }
 
 .statscounter {
@@ -111,6 +120,10 @@
 	width: 240px;
 	margin-top: 5px;
 	margin-bottom: 5px;
+}
+
+.glyphicon {
+    font-size: 24px;
 }
 
 .inplabel {
@@ -138,6 +151,7 @@
 	position: relative;
 	/*margin-left: 50%;*/
 	margin-top: 20% ;
+	opacity : 10%;
 }
 
 .speedselect {
@@ -147,91 +161,62 @@
 	padding-left: 10px;
 }
 
+.fileUpload {
+    position: relative;
+    overflow: hidden;
+    margin: 10px;
+}
+.fileUpload input.upload {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
 
-.accordion {
-  max-width: 500px;
-  margin: 0 auto;
+
+.image-preview-input {
+    position: relative;
+	overflow: hidden;
+	margin: 0px;
+    color: #333;
+    background-color: #fff;
+    border-color: #ccc;
 }
-.accordion__title {
-  font-family: 'industry', sans-serif;
-  font-weight: 300;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 1.125em;
+
+.image-preview-input input[type=file] {
+	position: absolute;
+	top: 0;
+	right: 0;
+	margin: 0;
+	padding: 0;
+	font-size: 20px;
+	cursor: pointer;
+	opacity: 0;
+	filter: alpha(opacity=0);
 }
-.accordion__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+
+
+.image-preview-input-title {
+    margin-left:2px;
 }
-.accordion__item {
-  border-bottom: 1px solid #000;
-  visibility: hidden;
+
+.custom-file-upload input[type="file"] {
+    display: none;
 }
-.accordion__item:last-child {
-  border-bottom: 0;
+
+
+.custom-file-upload .custom-file-upload1 {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
 }
-.accordion__item.is-active .accordion__itemTitleWrap::after {
-  -webkit-transform: translateX(-20%);
-          transform: translateX(-20%);
-}
-.accordion__item.is-active .accordion__itemIconWrap {
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
-}
-.accordion__itemTitleWrap {
-  display: flex;
-  height: 2.5em;
-  align-items: center;
-  padding: 0 1em;
-  color: #fff;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-}
-.accordion__itemTitleWrap::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 200%;
-  height: 100%;
-  background: #3bade3;
-  background: linear-gradient(45deg, #3bade3 0%, #576fe6 25%, #9844b7 51%, #ff357f 100%);
-  z-index: 1;
-  transition: -webkit-transform .4s ease;
-  transition: transform .4s ease;
-  transition: transform .4s ease, -webkit-transform .4s ease;
-}
-.accordion__itemTitleWrap.is-active::after, .accordion__itemTitleWrap:hover::after {
-  -webkit-transform: translateX(-20%);
-          transform: translateX(-20%);
-}
-.accordion__itemIconWrap {
-  width: 1.25em;
-  height: 1.25em;
-  margin-left: auto;
-  position: relative;
-  z-index: 10;
-}
-.accordion__itemTitle {
-  margin: 0;
-  font-family: 'industry', sans-serif;
-  font-weight: 300;
-  font-size: 1em;
-  position: relative;
-  z-index: 10;
-}
-.accordion__itemContent {
-  font-size: 0.875em;
-  height: 0;
-  overflow: hidden;
-  background-color: #fff;
-  padding: 0 1.25em;
-}
-.accordion__itemContent p {
-  margin: 2em 0;
-}
+
 
 
 .progress {
